# RMIT-Web-based-Data-Application

./: .dockerignore  .env.example  .env.template  .gitignore  Makefile  README.md  docker-compose.yml
.specify/: init-options.json
ai-service/: Dockerfile  main.py  requirements.txt
app/: .dockerignore  Dockerfile  Makefile  config.py  database.py  exceptions.py  main.py  pyproject.toml
app/ai/: pipeline.py  preprocessor.py  semantic_pipeline.py  transformers.py
app/ai/stop_word/: stopwords_en_enhancement.txt
app/migrations/: 000001_create_extensions.down.sql  000001_create_extensions.up.sql  000002_create_users.up.sql  000003_create_products.up.sql  000004_create_reviews.up.sql  000005_create_orders.up.sql  000006_create_order_items.up.sql  000007_create_updated_at_trigger.up.sql  000008_add_user_profile_columns.down.sql  000008_add_user_profile_columns.up.sql  000009_add_user_gender.down.sql  000009_add_user_gender.up.sql  000010_add_review_ai_model.down.sql  000010_add_review_ai_model.up.sql  000011_drop_reviews_status_check.down.sql  000011_drop_reviews_status_check.up.sql
app/models/: __init__.py  order.py  product.py  review.py  user.py
app/opensearch/: client.py  embeddings.py  fallback_logic.py  keyword_search.py  name_search.py  product_index.py  query_builder.py  semantic_search.py
app/repositories/: order_repo.py  photo_repo.py  product_repo.py  review_repo.py  user_repo.py
app/routers/: ai.py  auth.py  dashboard.py  health.py  orders.py  products.py  recommendations.py  reviews.py  users.py
app/schemas/: order.py  photo.py  product.py  review.py  user.py
app/scripts/: download_rf_model.py  generate_seed.py  migrate.py  reindex_products.py  search_relevance_check.py  snapshot_seed.sql  snapshotdb.py
app/services/: __init__.py  ai_service.py  order_service.py  product_service.py  recommendation_service.py  review_service.py  search_service.py  user_service.py
backend/: go.mod  (+2 more)
(+105 files in other folders)
