[project]
name = "beauty-app"
version = "1.0.0"
description = "Beauty App — unified Python API + AI/ML service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.31",
    "asyncpg==0.29.0",
    "opensearch-py==2.6.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "passlib[bcrypt]==1.7.4",
    "torch",
    "sentence-transformers==3.0.1",
    "scikit-learn==1.5.1",
    "numpy>=2.0,<3",
    "joblib==1.4.2",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
    "greenlet>=3.0",
    "gensim>=4.3,<5",
    "pandas>=2.0,<3",
    "nltk>=3.8,<4",
    "pyspellchecker>=0.8,<1",
    "thefuzz>=0.22,<1",
    "wordfreq>=3.0,<4",
]


[tool.uv]
package = false

# Force CPU-only PyTorch so the Docker image does not pull NVIDIA/CUDA packages.
# sentence-transformers only needs CPU inference for text embeddings.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
